Minor layout bug fix

--- a/public/sass/_filetree.scss
+++ b/public/sass/_filetree.scss
@@ -1,59 +1,57 @@
-
 .filetree {
-    position: absolute;
-    padding: 1rem 2rem;
-    width:  100%;
-    height: 100%;
-    overflow-y: scroll;
-    top: 0;
-    left: 0;
+  position: absolute;
+  padding: 1rem 2rem;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  top: 0;
+  left: 0;
 }
 
 .tree {
-    // display: flex;
-    // flex-direction: column;
-    // padding: 10px;
+  // display: flex;
+  // flex-direction: column;
+  // padding: 10px;
 
-    &-cb {
-        margin-right:0.5rem;
-    }
+  &-cb {
+    margin-right: 0.5rem;
+  }
 
-    &-label {
-        font-size: 1.5rem;
-        cursor: pointer;
-    }
+  &-label {
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
 }
 
 .dir {
-    display: flex;
-    align-items: center;
-    background-color: none;
-    border: none;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  background-color: none;
+  border: none;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+  cursor: pointer;
 
-    &:focus {
-        outline: none;
-    }
-
+  &:focus {
+    outline: none;
+  }
 }
 
 .indent {
-    margin: 0 0 0 2rem;
+  margin: 0 0 0 2rem;
 }
 
 .hide-indent {
-    display: none;
+  display: none;
 }
 
 .indent2 {
-    margin: 0 0 0 3rem;
+  margin: 0 0 0 3rem;
 }
 
 .fa {
-    font-size: 1.5rem;
-    margin-right: 0.5rem;
-    cursor: pointer;
-    color: var(--color-primary-dark-3);
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+  cursor: pointer;
+  color: var(--color-primary-dark-3);
 }
