--- a/public/sass/_viewer.scss
+++ b/public/sass/_viewer.scss
@@ -146,7 +146,7 @@
   margin: 0 0 2rem 0;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &__heading {
     color: white;
@@ -191,7 +191,7 @@
   flex: 0.9 1;
   align-self: center;
   margin: -1rem 0 1rem 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   justify-content: space-around;
   align-items: center;
 
@@ -308,7 +308,7 @@
     flex-direction: column;
     flex: 3.5 1;
     margin: 0.5rem 0;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     &:first-of-type {
       margin-top: 0;
